<resources>
    <string name="app_name">AndroidRoom</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="btn_update">update</string>
    <string name="btn_get_all_users">get all users</string>
    <string name="btn_delete">delete</string>
    <string name="uid_hint">UID</string>
    <string name="btn_add_user">add user</string>
    <string name="id_placeholder">Id: %1$d</string>
    <string name="name_placeholder">Name: %1$s</string>
    <string name="surname_placeholder">Surname: %1$s</string>
</resources>
